Cleanup: translate Spanish comments to English, add interfaces, improve code clarity
- ListInterface.java and QueueInterface.java extracted
- All list/queue classes implement their respective interfaces
- BruteForceClosestPair renamed from Exercise1Test
- All Spanish // comments and Javadocs translated to English
- Removed redundant/redundant comments; improved wording
- Cleaned up dead commented-out code in WeightedGraph.java